[workspace]
members = [
  "contracts/account",
  "contracts/core",
  "contracts/mocks/*",
]

[workspace.package]
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
license       = "UNLICENSED"
homepage      = "https://larry.engineer"
repository    = "https://github.com/steak-enjoyers/ics-999-demo"
documentation = "https://github.com/steak-enjoyers/ics-999-demo#readme"
keywords      = ["blockchain", "cosmos", "cosmwasm", "ibc"]
rust-version  = "1.65.0"

[workspace.dependencies]
cosmwasm-schema = "1.2"
cosmwasm-std    = "1.2"
cw2             = "1.0"
cw-ownable      = "0.5"
cw-paginate     = "0.2"
cw-storage-plus = "1.0"
cw-utils        = "1.0"
ripemd          = "0.1"
sha2            = "0.10"
thiserror       = "1"
token-factory   = { version = "0.0.0", path = "./packages/token-factory" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
