[workspace]
resolver = "2"
members  = [
  "contracts/account",
  "contracts/core",
  "contracts/mocks/*",
  "packages/*",
]

[workspace.package]
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
license       = "UNLICENSED"
homepage      = "https://github.com/larry0x/ics-999"
repository    = "https://github.com/larry0x/ics-999"
documentation = "https://github.com/larry0x/ics-999#readme"
keywords      = ["blockchain", "cosmos", "cosmwasm", "ibc"]
rust-version  = "1.65.0"

[workspace.dependencies]
cosmwasm-schema = "1.2"
cosmwasm-std    = { version = "1.2", features = ["staking", "stargate", "ibc3", "cosmwasm_1_1", "cosmwasm_1_2"] }
cw2             = "1.0"
cw-ownable      = "0.5"
cw-paginate     = "0.2"
cw-storage-plus = "1.0"
cw-utils        = "1.0"
osmosis-std     = "0.15"
ripemd          = "0.1"
sha2            = "0.10"
thiserror       = "1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
rpath            = false
