[package]
name          = "one-core"
description   = "ICS-999 core contract"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["entry"]
# enable this feature to include instantiate/execute/query etc. exports
entry = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["ibc3"] }
cw2             = { workspace = true }
cw-paginate     = { workspace = true }
cw-storage-plus = { workspace = true }
one-types       = { workspace = true }
thiserror       = { workspace = true }
