[package]
name          = "one-core"
description   = "ICS-999 core contract"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true, features = ["stargate", "ibc3", "cosmwasm_1_2"] }
cw2             = { workspace = true }
cw-paginate     = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
ics999          = { path = "../../packages/ics999" }
osmosis-std     = { workspace = true }
ripemd          = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }
