[package]
name          = "mock-sender"
description   = "A mockup contract to be used as the action sender in E2E tests."
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }
rust-version  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-paginate     = { workspace = true }
cw-storage-plus = { workspace = true }
ics999          = { path = "../../../packages/ics999" }
one-core        = { path = "../../core", features = ["library"] }
thiserror       = { workspace = true }
